# lin_regression_simd-1-

./: CMakeLists.txt
src/: CMakeLists.txt  lin_regression.cpp
